--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.27",
+    "expo": "^54.0.33",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.8",
     "expo-font": "~13.3.2",
@@ -47,8 +47,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3"
   }
 }
