Align Expo config with uniconnect organization

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "uniconnet",
-    "slug": "uniconnet",
+    "name": "UniConnect",
+    "slug": "uniconnect",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -46,7 +46,7 @@
         "projectId": "806681e7-b2dc-444c-862e-1dbb77929149"
       }
     },
-    "owner": "juanse108",
+    "owner": "uniconnect",
     "updates": {
       "url": "https://u.expo.dev/806681e7-b2dc-444c-862e-1dbb77929149"
     },
