Fix slug to match projectId

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "UniConnect",
-    "slug": "uniconnect",
+    "slug": "uniconnet",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
